src/scss/component-specific.scss
@import './variables';

.pe-alert {
  &:first-child {
    margin-top: 32px;
  }

  display: flex;
  position: relative;
  margin-top: 20px;
  list-style: none;
  background-color: #FFF;
  padding: $alert-padding;
}

.alertList {
  position: fixed;
  margin: 0;
  -webkit-padding-start: 0;
  padding-left: 32px;
  width: 580px;
}

.alert-content {
  margin-top: 1em;
  margin-left: 12px;
  padding: 4px 12px 0 0;
}

.alert-content-info {
  margin: 0;
  padding: 4px 12px 0 0;
}

@media (max-width: 767px) {
  .alertList {
    width: 440px;
    padding: 0 25px;
  }

  .pe-alert {
    &:first-child {
      margin-top: 36px;
    }

    padding: $alert-responsive-padding;
  }

  .alert-content,
  .alert-content-info {
    padding-right: 8px;
  }
}

@media (max-width: 490px) {
  .alertList {
    width: auto;
  }
}

%border-extend {
  border-bottom: $alert-border-nonLeft;
  border-top: $alert-border-nonLeft;
  border-right: $alert-border-nonLeft;
  box-shadow: $alert-box-shadow;
}

li[id^="alert-Error"] {
  @extend %border-extend;
  border-left: $alert-border-left #db0020;
}

li[id^="alert-Success"],
li[id^="alert-Information"] {
  @extend %border-extend;
  border-left: $alert-border-left #19A5A3;
}

svg {
  height: 0;
  width: 0;
}

.alert-content-container .error-svg {
  color: #db0020;
  display: inline;
  margin-top: 23px;
}

.alert-content-container .success-svg {
  color: #19A5A3;
  display: inline;
  margin-top: 22px;
}

.alert-content-container {
  display: flex;
}

.alert-title {
  margin-right: 4px;
  display: inline;
}

.alert-text {
  margin-bottom: 0;
  display: inline;
}

.close-title {
  float: right;
  align-self: flex-start;
}

.transition-enter {
  transform:   translate(0,-350px);
  transform: translate3d(0,-350px,0);
}

.transition-enter.transition-enter-active {
	transform:   translate(0,0);
	transform: translate3d(0,0,0);
	transition-property: transform;
	transition-duration: 300ms;
	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), ease-in-out;
}

.transition-leave {
	transform:   translate(0,0,0);
	transform: translate3d(0,0,0);
  transition-property: transform;
	transition-duration: 200ms;
	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), ease-in;
}

.transition-leave.transition-leave-active {
	transform:   translate(-600px,0);
	transform: translate3d(-600px,0,0);
}

